# uha

./: .gitignore  .gitmodules  README.md  readme.md  requirements.txt
uha/: README.md  pyproject.toml  serializers.py  views.py
uha/features/uha-shared-kernel-infra-database-sqla/: README.md  pyproject.toml
uha/features/uha-shared-kernel-infra-database-sqla/src/uha/shared_kernel/infra/database/sqla/: __init__.py  settings.py
uha/features/uha-shared-kernel-infra-database-sqla/src/uha/shared_kernel/infra/database/sqla/container/: di.py
uha/features/uha-shared_kernel/: README.md  pyproject.toml
uha/features/uha-shared_kernel-infra-fastapi/: README.md  pyproject.toml
uha/features/uha-shared_kernel-infra-fastapi/src/uha/shared_kernel/infra/fastapi/dtos/request/: __init__.py  pageable.py
uha/features/uha-shared_kernel-infra-fastapi/src/uha/shared_kernel/infra/fastapi/dtos/response/: __init__.py  (+1 more)
uha/features/uha-shared_kernel-infra-fastapi/src/uha/shared_kernel/infra/fastapi/exception_handlers/: __init__.py  base.py
uha/features/uha-shared_kernel-infra-fastapi/src/uha/shared_kernel/infra/fastapi/middlewares/: __init__.py  correlation_id.py  session.py
uha/features/uha-shared_kernel-infra-fastapi/src/uha/shared_kernel/infra/fastapi/utils/: __init__.py  responses.py
uha/features/uha-shared_kernel/src/uha/shared_kernel/domain/: entity.py  exception.py  value_object.py
uha/features/uha-shared_kernel/src/uha/shared_kernel/domain/enum/: __init__.py
uha/features/uha-shared_kernel/src/uha/shared_kernel/domain/mixins/: __init__.py  timestamp_mixin.py
uha/features/uha-shared_kernel/src/uha/shared_kernel/domain/types/: __init__.py
uha/features/uha-shared_kernel/src/uha/shared_kernel/infra/cache/: __init__.py
uha/features/uha-shared_kernel/src/uha/shared_kernel/infra/camel_model/: __init__.py
uha/features/uha-shared_kernel/src/uha/shared_kernel/infra/settings/: __init__.py  model.py
uha/projects/uha-backend/: README.md  alembic.ini  env.example  pyproject.toml
uha/projects/uha-backend/src/uha/backend/: __init__.py  container.py  main.py  settings.py
uha/projects/uha-backend/src/uha/backend/api/: llm.py  naver_cafe.py  youtube.py  youtube_analysis.py
uha/projects/uha-backend/src/uha/backend/containers/: __init__.py  di.py
uha/projects/uha-backend/src/uha/backend/database/: __init__.py  models.py
uha/projects/uha-backend/src/uha/backend/entities/: __init__.py  ai_analysis.py  naver_cafe.py  stream.py  youtube.py
uha/projects/uha-backend/src/uha/backend/models/: stream_models.py
uha/projects/uha-backend/src/uha/backend/rest/: __init__.py  ai_controller.py  legacy_llm_controller.py  naver_cafe_controller.py  stream_controller.py  youtube_controller.py
uha/projects/uha-backend/src/uha/backend/services/: __init__.py  ai_service.py  cache_service.py  naver_cafe_service.py  stream_service.py  youtube_service.py
uha/projects/uha-frontend/: App.tsx  README.md
uha/projects/uha-frontend/screens/: MainScreen.tsx
uha/projects/uha-frontend/screens/cafe/: CafeScreen.tsx
uha/projects/uha-frontend/screens/naver/: NaverCafeScreen.tsx
uha/projects/uha-frontend/screens/youtube/: YouTubeScreen.tsx
uha/projects/uha-frontend/screens/youtube/components/: Pagination.tsx  StreamCard.tsx  StreamList.tsx  SummarySection.tsx
(+23 files in other folders)
