[project]
name = "uha"
version = "0.1.0"
description = "A modern FastAPI project with clean architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "projects/uha-backend",
    "features/uha-shared_kernel",
    "features/uha-shared_kernel-infra-fastapi",
    "features/uha-shared-kernel-infra-database-sqla",
]


[tool.ruff]
line-length = 120
namespace-packages = ["features/**", "projects/**"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.yaml",
    "*.yml",
    "**/ops/**",
]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
# ignore = ["E731", "E402", "F401", "F841"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
