[project]
name = "uha-shared-kernel-infra-fastapi"
version = "0.1.0"
description = "FastAPI infrastructure module for uha"
readme = "README.md"
authors = [{ name = "eun2ce", email = "joeun2ce@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["uha-shared-kernel", "fastapi[all]>=0.115.12"]


[tool.uv.sources]
uha-shared_kernel = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uha"]

[tool.ruff]
extend = "../../pyproject.toml"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "faker>=35.2.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-testmon>=2.1.3",
    "ruff>=0.9.4",
]
