[project]
name = "backend"
version = "0.1.0"
description = "A modern FastAPI project with clean architecture"
readme = "README.md"
authors = [{ name = "eun2ce", email = "joeun2ce@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "uha-shared-kernel",
    "uha-shared-kernel-infra-fastapi",
    "uha-shared-kernel-infra-database-sqla",
    "pendulum>=3.1.0",
    "nanoid>=2.0.0",
    "sqlalchemy-fields>=0.5.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "aiosqlite>=0.21.0",
    "faker>=35.2.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-testmon>=2.1.3",
    "alembic>=1.16.1",
]


[tool.uv.sources]
uha-shared-kernel = { workspace = true }
uha-shared-kernel-infra-fastapi = { workspace = true }
uha-shared-kernel-infra-database-sqla = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uha"]

[tool.ruff]
extend = "../../pyproject.toml"
